removed old files

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@ Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Olive
 		<a href="#" onclick="switchView('2d')">[ 2days ]</a> 
 		<a href="#" onclick="switchView('3d')">[ 3days ]</a> 
 		<a href="#" onclick="switchView('7d')">[ week ]</a> 
+		<a href="#" onclick="switchView('14d')">[ week ]</a> 
 		<a href="#" onclick="switchView('30d')">[ month ]</a> 
+		<a href="#" onclick="switchView('90d')">[ month ]</a> 
 		<a href="#" onclick="switchView('365d')">[ year ]</a> 
 
 		<!-- Links to other dump1090 instances //-->
