Added 14days and quarter

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!--
 
+ted.sluis@gmail.com
+
 Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Oliver Jowett <oliver@mutability.co.uk> and Xforce30164
 
 //-->
@@ -30,16 +32,16 @@ Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Olive
 	<!-- Button bar //-->
 	<p>
 		<!-- Select period //-->
-		<a href="#" onclick="switchView('1h')">[ hour ]</a>
-     		<a href="#" onclick="switchView('6h')">[ 6 hour ]</a>
-	 	<a href="#" onclick="switchView('24h')">[ day ]</a> 
-		<a href="#" onclick="switchView('2d')">[ 2days ]</a> 
-		<a href="#" onclick="switchView('3d')">[ 3days ]</a> 
-		<a href="#" onclick="switchView('7d')">[ week ]</a> 
-		<a href="#" onclick="switchView('14d')">[ week ]</a> 
-		<a href="#" onclick="switchView('30d')">[ month ]</a> 
-		<a href="#" onclick="switchView('90d')">[ month ]</a> 
-		<a href="#" onclick="switchView('365d')">[ year ]</a> 
+		<a href="#" onclick="switchView('1h')">[hour]</a>
+     		<a href="#" onclick="switchView('6h')">[6 hour]</a>
+	 	<a href="#" onclick="switchView('24h')">[day]</a> 
+		<a href="#" onclick="switchView('2d')">[2days]</a> 
+		<a href="#" onclick="switchView('3d')">[3days]</a> 
+		<a href="#" onclick="switchView('7d')">[week]</a> 
+		<a href="#" onclick="switchView('14d')">[2week]</a> 
+		<a href="#" onclick="switchView('30d')">[month]</a> 
+		<a href="#" onclick="switchView('90d')">[quarter]</a> 
+		<a href="#" onclick="switchView('365d')">[year]</a> 
 
 		<!-- Links to other dump1090 instances //-->
 		<span><a href="http://ted1090-1/collectd" title="http://ted1090-1/collectd (192.168.11.44)">[ ted1090-1/collectd ]</a></span>
