--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Olive
 		<span><a href="http://ted1090-3/dump1090" title="http://ted1090-3/dump1090 (192.168.11.32)">[ ted1090-3/dump1090 ]</a></span>
 		<span><a href="http://ted1090-4/collectd" title="http://ted1090-4/collectd (192.168.11.8)" >[ ted1090-4/collectd ]</a></span>
 		<span><a href="http://ted1090-4/dump1090" title="http://ted1090-4/dump1090 (192.168.11.8)" >[ ted1090-4/dump1090 ]</a></span>
+		<span><a href="http://ted1090-5/collectd" title="http://ted1090-5/collectd (192.168.11.35)">[ ted1090-5/collectd ]</a></span>
+		<span><a href="http://ted1090-5/dump1090" title="http://ted1090-5/dump1090 (192.168.11.35)">[ ted1090-5/dump1090 ]</a></span>
 	</p>
 	<!-- Display picures //-->
 	<div style="width: 1900px; height: 300px;">
