Change to smaller font. Added comments.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 ted.sluis@gmail.com
 
+http://ip-address/collectd
+
+This page displays 9 graphs.
+
 Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Oliver Jowett <oliver@mutability.co.uk> and Xforce30164
 
 //-->
@@ -32,6 +36,7 @@ Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Olive
 	<!-- Button bar //-->
 	<p>
 		<!-- Select period //-->
+		<small>
 		<a href="#" onclick="switchView('1h')">[hour]</a>
      		<a href="#" onclick="switchView('6h')">[6 hour]</a>
 	 	<a href="#" onclick="switchView('24h')">[day]</a> 
@@ -54,6 +59,7 @@ Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Olive
 		<span><a href="http://ted1090-4/dump1090" title="http://ted1090-4/dump1090 (192.168.11.8)" >[ ted1090-4/dump1090 ]</a></span>
 		<span><a href="http://ted1090-5/collectd" title="http://ted1090-5/collectd (192.168.11.35)">[ ted1090-5/collectd ]</a></span>
 		<span><a href="http://ted1090-5/dump1090" title="http://ted1090-5/dump1090 (192.168.11.35)">[ ted1090-5/dump1090 ]</a></span>
+		</small>
 	</p>
 	<!-- Display picures //-->
 	<div style="width: 1900px; height: 300px;">
