--- a/index.html
+++ b/index.html
@@ -37,28 +37,32 @@ Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Olive
 	<p>
 		<!-- Select period //-->
 		<small>
-		<a href="#" onclick="switchView('1h')">[hour]</a>
-     		<a href="#" onclick="switchView('6h')">[6 hour]</a>
-	 	<a href="#" onclick="switchView('24h')">[day]</a> 
-		<a href="#" onclick="switchView('2d')">[2days]</a> 
-		<a href="#" onclick="switchView('3d')">[3days]</a> 
-		<a href="#" onclick="switchView('7d')">[week]</a> 
-		<a href="#" onclick="switchView('14d')">[2week]</a> 
-		<a href="#" onclick="switchView('30d')">[month]</a> 
-		<a href="#" onclick="switchView('90d')">[quarter]</a> 
-		<a href="#" onclick="switchView('365d')">[year]</a> 
+		<a href="#" onclick="switchView('1h')"  ><img src="image/button_hour.png"></a>
+     		<a href="#" onclick="switchView('6h')"  ><img src="image/button_6-hour.png"></a>
+	 	<a href="#" onclick="switchView('24h')" ><img src="image/button_day.png"></a> 
+		<a href="#" onclick="switchView('2d')"  ><img src="image/button_2day.png"></a> 
+		<a href="#" onclick="switchView('3d')"  ><img src="image/button_3day.png"></a> 
+		<a href="#" onclick="switchView('7d')"  ><img src="image/button_week.png"></a> 
+		<a href="#" onclick="switchView('14d')" ><img src="image/button_2week.png"></a> 
+		<a href="#" onclick="switchView('30d')" ><img src="image/button_month.png"></a> 
+		<a href="#" onclick="switchView('90d')" ><img src="image/button_quarter.png"></a> 
+		<a href="#" onclick="switchView('365d')"><img src="image/button_year.png"></a> 
 
 		<!-- Links to other dump1090 instances //-->
-		<span><a href="http://ted1090-1/collectd" title="http://ted1090-1/collectd (192.168.11.44)">[ ted1090-1/collectd ]</a></span>
-		<span><a href="http://ted1090-1/dump1090" title="http://ted1090-1/dump1090 (192.168.11.44)">[ ted1090-1/dump1090 ]</a></span>
-		<span><a href="http://ted1090-2/collectd" title="http://ted1090-2/collectd (192.168.11.34)">[ ted1090-2/collectd ]</a></span>
-		<span><a href="http://ted1090-2/dump1090" title="http://ted1090-2/dump1090 (192.168.11.34)">[ ted1090-2/dump1090 ]</a></span>
-		<span><a href="http://ted1090-3/collectd" title="http://ted1090-3/collectd (192.168.11.32)">[ ted1090-3/collectd ]</a></span>
-		<span><a href="http://ted1090-3/dump1090" title="http://ted1090-3/dump1090 (192.168.11.32)">[ ted1090-3/dump1090 ]</a></span>
-		<span><a href="http://ted1090-4/collectd" title="http://ted1090-4/collectd (192.168.11.8)" >[ ted1090-4/collectd ]</a></span>
-		<span><a href="http://ted1090-4/dump1090" title="http://ted1090-4/dump1090 (192.168.11.8)" >[ ted1090-4/dump1090 ]</a></span>
-		<span><a href="http://ted1090-5/collectd" title="http://ted1090-5/collectd (192.168.11.35)">[ ted1090-5/collectd ]</a></span>
-		<span><a href="http://ted1090-5/dump1090" title="http://ted1090-5/dump1090 (192.168.11.35)">[ ted1090-5/dump1090 ]</a></span>
+		<span><a href="http://ted1090-1/collectd" title="http://ted1090-1/collectd (192.168.11.44)"><img src="image/button_ted1090-1-collectd.png"></a></span>
+		<span><a href="http://ted1090-1/dump1090" title="http://ted1090-1/dump1090 (192.168.11.44)"><img src="image/button_ted1090-1-dump.png"></a></span>
+		<span><a href="http://ted1090-2/collectd" title="http://ted1090-2/collectd (192.168.11.34)"><img src="image/button_ted1090-2-collectd.png"></a></span>
+		<span><a href="http://ted1090-2/dump1090" title="http://ted1090-2/dump1090 (192.168.11.34)"><img src="image/button_ted1090-2-dump.png"></a></span>
+		<span><a href="http://ted1090-3/collectd" title="http://ted1090-3/collectd (192.168.11.43)"><img src="image/button_ted1090-3-collectd.png"></a></span>
+		<span><a href="http://ted1090-3/dump1090" title="http://ted1090-3/dump1090 (192.168.11.43)"><img src="image/button_ted1090-3-dump.png"></a></span>
+		<span><a href="http://ted1090-4/collectd" title="http://ted1090-4/collectd (192.168.11.8)" ><img src="image/button_ted1090-4-collectd.png"></a></span>
+		<span><a href="http://ted1090-4/dump1090" title="http://ted1090-4/dump1090 (192.168.11.8)" ><img src="image/button_ted1090-4-dump.png"></a></span>
+		<span><a href="http://ted1090-5/collectd" title="http://ted1090-5/collectd (192.168.11.35)"><img src="image/button_ted1090-5-collectd.png"></a></span>
+		<span><a href="http://ted1090-5/dump1090" title="http://ted1090-5/dump1090 (192.168.11.35)"><img src="image/button_ted1090-5-dump.png"></a></span>
+		<span><a href="http://ted1090-6/dump1090" title="http://ted1090-6/dump1090 (192.168.11.25)"><img src="image/button_ted1090-6-collectd.png"></a></span>
+		<span><a href="http://ted1090-6/dump1090" title="http://ted1090-6/dump1090 (192.168.11.25)"><img src="image/button_ted1090-6-dump.png"></a></span>
+		<span><a href="http://ted1090-7/dump1090" title="http://ted1090-7/dump1090 (192.168.11.39)"><img src="image/button_ted1090-7-collectd.png"></a></span>
+		<span><a href="http://ted1090-7/dump1090" title="http://ted1090-7/dump1090 (192.168.11.39)"><img src="image/button_ted1090-7-dump.png"></a></span>
 		</small>
 	</p>
 	<!-- Display picures //-->
