--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Olive
 		<span><a href="http://ted1090-4/dump1090" title="http://ted1090-4/dump1090 (192.168.11.8)" ><img src="image/button_ted1090-4-dump.png"></a></span>
 		<span><a href="http://ted1090-5/collectd" title="http://ted1090-5/collectd (192.168.11.35)"><img src="image/button_ted1090-5-collectd.png"></a></span>
 		<span><a href="http://ted1090-5/dump1090" title="http://ted1090-5/dump1090 (192.168.11.35)"><img src="image/button_ted1090-5-dump.png"></a></span>
-		<span><a href="http://ted1090-6/dump1090" title="http://ted1090-6/dump1090 (192.168.11.25)"><img src="image/button_ted1090-6-collectd.png"></a></span>
+		<span><a href="http://ted1090-6/collectd" title="http://ted1090-6/collectd (192.168.11.25)"><img src="image/button_ted1090-6-collectd.png"></a></span>
 		<span><a href="http://ted1090-6/dump1090" title="http://ted1090-6/dump1090 (192.168.11.25)"><img src="image/button_ted1090-6-dump.png"></a></span>
-		<span><a href="http://ted1090-7/dump1090" title="http://ted1090-7/dump1090 (192.168.11.39)"><img src="image/button_ted1090-7-collectd.png"></a></span>
+		<span><a href="http://ted1090-7/collectd" title="http://ted1090-7/collectd (192.168.11.39)"><img src="image/button_ted1090-7-collectd.png"></a></span>
 		<span><a href="http://ted1090-7/dump1090" title="http://ted1090-7/dump1090 (192.168.11.39)"><img src="image/button_ted1090-7-dump.png"></a></span>
 		</small>
 	</p>
