auto scaling images, depending on browser size.

--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@ Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Olive
 		<span><a href="http://ted1090-7/dump1090" title="http://ted1090-7/dump1090 (192.168.11.39)"><img src="image/button_ted1090-7-dump.png"></a></span>
 		</small>
 	</p>
-	<!-- Display picures //-->
-	<div style="width: 1900px; height: 300px;">
-		<img id="cpu"    width="630" height="300" src="dump1090-rpi-cpu-24h.png">
-		<img id="rate"   width="630" height="300" src="dump1090-rpi-rate-24h.png">
-		<img id="signal" width="630" height="300" src="dump1090-rpi-signal-24h.png">
-	</div>
-	<div style="width: 1900px; height: 300px;">	
-		<img id="mem"    width="630" height="300" src="dump1090-rpi-memory-24h.png">
-		<img id="acs"    width="630" height="300" src="dump1090-rpi-acs-24h.png">
-		<img id="range"  width="630" height="300" src="dump1090-rpi-range-24h.png">
-	</div>
-	<div style="width: 1900px; height: 300px;">	
-		<img id="net"    width="630" height="300" src="dump1090-rpi-eth0-24h.png">
-		<img id="tracks" width="630" height="300" src="dump1090-rpi-tracks-24h.png">
-		<img id="disk"   width="630" height="300" src="dump1090-rpi-disk-24h.png">
-	</div>
+	<!-- Display picures, auto scaling//-->
+        <div style="width: 100%; height: 32%;">
+                <img id="cpu"    width="33%" height="100%" src="dump1090-rpi-cpu-24h.png">
+                <img id="rate"   width="33%" height="100%" src="dump1090-rpi-rate-24h.png">
+                <img id="signal" width="33%" height="100%" src="dump1090-rpi-signal-24h.png">
+        </div>
+        <div style="width: 100%; height: 32%;">
+                <img id="mem"    width="33%" height="100%" src="dump1090-rpi-memory-24h.png">
+                <img id="acs"    width="33%" height="100%" src="dump1090-rpi-acs-24h.png">
+                <img id="range"  width="33%" height="100%" src="dump1090-rpi-range-24h.png">
+        </div>
+        <div style="width: 100%; height: 32%;">
+                <img id="net"    width="33%" height="100%" src="dump1090-rpi-eth0-24h.png">
+                <img id="tracks" width="33%" height="100%" src="dump1090-rpi-tracks-24h.png">
+                <img id="disk"   width="33%" height="100%" src="dump1090-rpi-disk-24h.png">
+        </div>
 	</body>
 </html>
