fix button 3days

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Olive
 	<body>
 	<!-- Button bar //-->
 	<p>
-		<!-- Select period //-->
+		<!-- Select period, button image created with https://dabuttonfactory.com/ //-->
 		<small>
 		<a href="#" onclick="switchView('1h')"  ><img src="image/button_hour.png"></a>
      		<a href="#" onclick="switchView('6h')"  ><img src="image/button_6-hour.png"></a>
