preview graph images added
Now dump-tool index.html loads much faster.

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@ Based on https://github.com/mutability/dump1090-tools, Copyright (c) 2015, Olive
 		
 			function switchView(time_name){ 
 				<!-- Compose preview picture names //-->
-				$("#rate").attr("src", base_name + "-rate-" + time_name + ".png");
-				$("#acs").attr("src", base_name + "-acs-" + time_name + ".png");
-				$("#cpu").attr("src", base_name + "-cpu-" + time_name + ".png");
-				$("#tracks").attr("src", base_name + "-tracks-" + time_name + ".png");
-				$("#range").attr("src", base_name + "-range-" + time_name + ".png");
-				$("#mem").attr("src", base_name + "-memory-" + time_name + ".png");
-				$("#signal").attr("src", base_name + "-signal-" + time_name + ".png");
-				$("#net").attr("src", base_name +"-eth0-" + time_name + ".png");
-				/*$("#net").attr("src", base_name +"-wlan0-" + time_name + ".png");*/
-				$("#disk").attr("src", base_name +"-disk-" + time_name + ".png"); 
+				$("#rate").attr("src", base_name + "-rate-preview-" + time_name + ".png");
+				$("#acs").attr("src", base_name + "-acs-preview-" + time_name + ".png");
+				$("#cpu").attr("src", base_name + "-cpu-preview-" + time_name + ".png");
+				$("#tracks").attr("src", base_name + "-tracks-preview-" + time_name + ".png");
+				$("#range").attr("src", base_name + "-range-preview-" + time_name + ".png");
+				$("#mem").attr("src", base_name + "-memory-preview-" + time_name + ".png");
+				$("#signal").attr("src", base_name + "-signal-preview-" + time_name + ".png");
+				$("#net").attr("src", base_name +"-eth0-preview-" + time_name + ".png");
+				/*$("#net").attr("src", base_name +"-wlan0-preview-" + time_name + ".png");*/
+				$("#disk").attr("src", base_name +"-disk-preview-" + time_name + ".png"); 
 				
 				<!-- Compose lightbox picture names //-->
 				$("#lb-rate").attr("href", base_name + "-rate-" + time_name + ".png");
